<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/darkBrown"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>


    <Button
        android:id="@+id/btnCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateOrder"
        android:backgroundTint="@color/lightBrown"
        android:layout_margin="8dp"
        android:textColor="@color/darkBrown"
        android:textSize="24sp"
        android:onClick="onClickCreateOrder"/>
</LinearLayout>
