<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloUser"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tea"
            android:checked="true"
            android:onClick="onClickChangeDrink"/>
        <RadioButton
            android:id="@+id/rbCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/coffee"
            android:onClick="onClickChangeDrink"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/milk"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkboxSugar"/>

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sugar"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"/>

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lemon"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choseDrink"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/checkboxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerOfTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/optionsOfTea"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerOfCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/optionsOfCoffee"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/btnSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/btnSendDescriptions"
        android:src="@drawable/btn"
        app:layout_constraintTop_toBottomOf="@id/spinnerOfCoffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClickSendOrder"/>


</androidx.constraintlayout.widget.ConstraintLayout>